# kindle-create

./: README.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: pdf_page_tool.swift
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
