[package]
name = "kindle-create"
version = "0.1.0"
description = "Desktop PDF to EPUB converter for Kindle workflows"
authors = ["user"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["fs"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
